--- a/src/components/BioCollaboratorTile/styles.scss
+++ b/src/components/BioCollaboratorTile/styles.scss
@@ -1,20 +1,35 @@
 @import "node_modules/@biotope/element/lib/host.mixin";
+@import '../../resources/scss/defaultSassImports.scss';
 
 @include host('bio-collaborator-tile') {
     .wrapper {
-        border: 1px solid #b9b9b9;
         margin: 8px;
         width: 250px;
         height: 270px;
         cursor: pointer;
-        transition: background-color 0.4s ease;
-
+        transition: all 0.4s ease;
+        
         &:hover {
-            background-color: #b9b9b9;
+            transform: translate3d(0,3px,0);
+            
+            img {
+                width: 207px;
+                border: 5px solid $main-orange;
+            }
         }
-
+        
         p {
             text-align: center;
+        }
+        
+        img {
+            width: 200px;
+            display: block;
+            margin: 0 auto;
+            clip-path: circle();
+            border: 5px solid transparent;
+            border-radius: 50%;
+            transition: all 0.4s ease;
         }
     }
 }
