--- a/src/components/BioCollaboratorTile/styles.scss
+++ b/src/components/BioCollaboratorTile/styles.scss
@@ -29,7 +29,7 @@
             clip-path: circle();
             border: 5px solid transparent;
             border-radius: 50%;
-            transition: all 0.4s ease;
+            transition: 0.4s ease;
         }
     }
 }
