--- a/src/components/BioCollaboratorTile/styles.scss
+++ b/src/components/BioCollaboratorTile/styles.scss
@@ -14,7 +14,7 @@
             
             img {
                 width: 207px;
-                border: 5px solid $main-orange;
+                border: 5px solid $bio-orange;
             }
         }
         
