--- a/src/components/BioCookieBanner/styles.scss
+++ b/src/components/BioCookieBanner/styles.scss
@@ -15,27 +15,26 @@
                 display: flex;
             }
 			p {
+                color: $bio-white;
+                margin: 20px 0;
                 @include breakpoint($medium) {
                     flex: 4;
                 }
-                margin: 20px 0;
 			}
 			.buttons {
                 margin: 20px 0;
                 display: flex;
-                flex-flow: row;
+                flex-flow: column;
                 justify-content: space-around;
+
                 @include breakpoint($medium) {
                     flex: 1;
-                    flex-flow: column;
                     margin: 20px 40px;
                 }
 
                 bio-button {
                     &:last-child {
-                        @include breakpoint($medium) {
-                            margin-top: 20px;
-                        }
+                        margin-top: 10px;
                     }
                 }
 			}
