--- a/src/components/BioCollaboratorTile/styles.scss
+++ b/src/components/BioCollaboratorTile/styles.scss
@@ -49,6 +49,7 @@
 
 			img {
 				width: 200px;
+				height: 200px;
 				display: block;
 				clip-path: circle();
 				border: 5px solid transparent;
@@ -65,6 +66,7 @@
 			.img-wrapper {
 				img {
 					width: 207px;
+					height: 207px;
 				}
 				.info {
 					width: 207px;
