--- a/src/components/BioCookieBanner/styles.scss
+++ b/src/components/BioCookieBanner/styles.scss
@@ -4,9 +4,16 @@
 @include host("bio-cookie-banner") {
     z-index: 2000;
     width: 100%;
+
 	.wrapper {
-        padding: 20px 0;
-		background-color: $bio-orange;
+        max-height: 100vh;
+        overflow: auto;
+        background-color: $bio-orange;
+
+        @include breakpoint($medium) {
+            padding: 20px 0;
+        }
+
 		&-inner {
 			width: 90%;
             margin: 0 auto;
@@ -18,27 +25,30 @@
 			.buttons {
                 margin: 20px 0;
                 display: flex;
-                flex-flow: column;
+                flex-flow: row;
                 justify-content: space-around;
-
+                
                 @include breakpoint($medium) {
                     flex: 1;
+                    flex-flow: column;
                     margin: 20px 40px;
-                }
 
-                bio-button {
-                    &:last-child {
-                        margin-top: 10px;
+                    bio-button {
+                        &:last-child {
+                            margin-top: 10px;
+                        }
                     }
                 }
             }
             
             ::slotted(p) {
-                color: $bio-white !important;
                 margin: 20px 0;
-
+                color: $bio-white !important;
+                font-size: 15px;
+                
                 @include breakpoint($medium) {
                     flex: 4;
+                    font-size: 17px;
                 }
             }
         }
